@@ -85,6 +85,10 @@ if (!is_file(LOCAL_PATH . 'lang/'.$settings['language'].'.php'))
 // Load translation
 require_once LOCAL_PATH . 'lang/'.$settings['language'].'.php';
 
+// Bullshit happens if date.timezone isn't set in php 5.3+
+if (!ini_get('date.timezone')) 
+	@ini_set('date.timezone', 'Etc/UTC');
+
 // Determine our OS
 $os = determineOS();
 
@@ -97,7 +101,7 @@ $getter = parseSystem($os, $settings);
 $info = $getter->getAll();
 
 // Store current timestamp for alternative output formats
-$info['timestamp'] = date("c");
+$info['timestamp'] = date('c');
 
 // Extensions
 runExtensions($info, $settings);
